fix javadoc build